@@ -45,7 +45,7 @@ class Allocator {
 public:
     virtual MemRef Alloc(size_t size) {void* p = new char[size]; return MemRef(p,(size_t)p);}
     virtual MemRef ReAlloc(size_t /*ref*/, void* p, size_t size) {void* p2 = realloc(p, size); return MemRef(p2,(size_t)p2);}
-    virtual void Free(size_t, void* p) {return delete[](static_cast<char*>(p));}
+    virtual void Free(size_t, void* p) {return delete[] static_cast<char*>(p);}
 
     virtual void* Translate(size_t ref) const {return (void*)ref;}
     virtual bool IsReadOnly(size_t) const {return false;}
