@@ -97,12 +97,10 @@ Group::Group():
     create();
 }
 
-Group::Group(const char* filename, int mode):
+Group::Group(string filename, int mode):
     m_top(m_alloc), m_tables(m_alloc), m_tableNames(m_alloc), m_freePositions(m_alloc),
     m_freeLengths(m_alloc), m_freeVersions(m_alloc), m_persistMode(mode), m_isValid(false)
 {
-    TIGHTDB_ASSERT(filename);
-
     // With shared groups, we might want to start in invalid state
     // and then initialize later
     if (mode & GROUP_INVALID)
@@ -111,7 +109,7 @@ Group::Group(const char* filename, int mode):
     create_from_file(filename, true);
 }
 
-Group::Group(const char* buffer, size_t len, bool take_ownership):
+Group::Group(from_mem_tag, char* buffer, size_t len, bool take_ownership):
     m_top(m_alloc), m_tables(m_alloc), m_tableNames(m_alloc), m_freePositions(m_alloc),
     m_freeLengths(m_alloc), m_freeVersions(m_alloc), m_persistMode(0), m_isValid(false)
 {
@@ -126,7 +124,7 @@ Group::Group(const char* buffer, size_t len, bool take_ownership):
     }
 }
 
-bool Group::create_from_file(const char* filename, bool doInit)
+bool Group::create_from_file(string filename, bool doInit)
 {
     TIGHTDB_ASSERT(!m_isValid);
 
