@@ -17,6 +17,8 @@ Format:
 ----------
 + my_table[i].foo.get() added for all column types except subtables. This is to avoid having to repeat the explicit column type in cast expressions when the actual value is needed.
 + my_table[i].foo.set(...) added for all column types except subtables. This is for completeness.
++ When passing a file name to a Group or a SharedGroup constructor, the type is now a std::string. This is made possible by allowing exception handling. It simplifies the implementation in a few places, and in general it simplifies application code.
++ A 'tag' argument has ben added to the Group constructor that takes a memory buffer as argument. Without this change, two Group constructors were way too similar.
 
 
 2012-12-06 (Kristian Spangsege)
